	PR rtl-optimization/41862 	* store-motion.c (store_killed_in_insn, compute_store_table, 	remove_reachable_equiv_notes, replace_store_insn, 	build_store_vectors): Ignore all DEBUG_INSNs.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@155596 138bc75d-0d04-0410-961f-82ee72b054a4